--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<title>黑客帝国代码雨特效v1.0</title>
+	<title>黑客帝国</title>
   </head>
   <body>	
 	<canvas id="canvas" style="background:black" width="620" height="340"></canvas>
